# tree_editor

./: CMakeLists.txt  README.md
data/math_tree/: choices.json  math_nodes.json
data/math_tree/export/: new_math_tree_1.json
example/debug_server/: echo_debug_server.cpp
example/math_tree/: main.cpp  math_editor_window.cpp  math_editor_window.h  math_nodes.cpp  math_nodes.h
include/: choice_manager.h
include/dialogs/: editable_dialog.h  editable_item.h  line_dialog.h  path_config_dialog.h
include/graph/: basic_node.h  multi_instance_window.h  tree_instance.h
include/tree_editor/common/: choice_manager.h  debug_cmd.h  logger.h
include/tree_editor/common/dialogs/: editable_dialog.h  editable_item.h  info_dialog.h  line_dialog.h  path_config_dialog.h  search_select_dialog.h
include/tree_editor/common/graph/: basic_node.h  basic_node_desc.h  multi_instance_window.h  node_graph.h  tree_instance.h
include/tree_editor/debugger/: debug_cmd.h  debug_server.h  debugger_main_window.h  log_dialog.h  log_item.h  log_tree_model.h
include/tree_editor/editor/: editor_main_window.h
resource/: editor_main_window.ui
src/common/dialogs/: editable_dialog.cpp  editable_item.cpp  info_dialog.cpp  line_dialog.cpp  path_config_dialog.cpp  search_select_dialog.cpp
src/common/graph/: basic_node.cpp  multi_instance_window.cpp  node_graph.cpp  tree_instance.cpp
src/debugger/: debug_cmd.cpp  debug_main.cpp  debug_server.h  debugger_main_window.cpp  debugger_main_window.h  log_dialog.cpp  log_item.cpp  log_tree_model.cpp
src/debugger/log_viewer/: log_dialog.cpp  log_dialog.h  log_item.cpp  log_tree_model.cpp  log_tree_model.h
src/editor/: editor_main_window.cpp  editor_main_window.h
test/math_tree/: choices.json  math_editor_window.cpp  math_nodes.cpp  math_nodes.json
test/path_require/: path_require_test.cpp
